some nice version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <script src="script.js"></script>
 
 <div class="container">
-    <div class="viewport">
-    <img class="mosaic" src="mosaic/mosaic4-small.jpg" full="mosaic/mosaic4-full.jpg"></img>
+    <div class="viewport animate">
+        <img class="splash mosaic" src="mosaic/mosaic4-small.jpg"></img>
+        <div class="stub" src="mosaic/mosaic4-full.jpg"></div>
     </div>
 </div>
