--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
+<!-- Meta information goes here -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+<meta name="ROBOTS" content="NOODP">
+<meta name="author" content="Anna Morozova">
+<meta name="description" content="Anna Morozova homepage">
+<meta name="keywords" content="Anna Morozova">
+<link rel="author" href="https://plus.google.com/u/1/117982802227127557040"/>
+<title>Anna Morozova</title>
+<!-- ================== -->
+
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="pace.css">
+<link rel="stylesheet" href="pace3.css">
+<link rel="stylesheet" href="font-awesome.min.css">
 <script src="matrix.min.js"></script>
 <script src="pace.min.js"></script>
 <script src="imageload.js"></script>
 <script src="script.js"></script>
 
+<!-- L A Y O U T  -->
 <div class="container">
-    <div class="viewport animate">
+    <div class="viewport">
         <img class="splash mosaic" src="mosaic/mosaic4-small.jpg"></img>
-        <div class="stub" src="mosaic/mosaic4-full.jpg"></div>
+        <div class="stub" src="mosaic/test.jpg"></div>
+    </div>
+    <div class="social">
+        <a href="https://vk.com/anechkamorozova"><i class="fa fa-vk fa-4x"></i></a>
+        <a href="https://www.instagram.com/an_na_morozova/"><i class="fa fa-instagram fa-4x"></i></a>
+        <a href="mailto:annamorozova90@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a>
     </div>
 </div>
