--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- ================== -->
 
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="pace3.css">
+<link rel="stylesheet" href="pace.css">
 <link rel="stylesheet" href="font-awesome.min.css">
 <script src="matrix.min.js"></script>
 <script src="pace.min.js"></script>
