--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="viewport">
         <img class="splash mosaic" src="mosaic/mosaic4-small.jpg"></img>
-        <div class="stub" src="mosaic/test.jpg"></div>
+        <div class="stub" src="mosaic/mosaic4-medium.jpg"></div>
     </div>
     <div class="social">
         <a href="https://vk.com/anechkamorozova"><i class="fa fa-vk fa-4x"></i></a>
